omq-zeromq/tests/trybuild/compat-fail/message_try_from_vec_bytes.rs
use bytes::Bytes;
use std::convert::TryFrom;
use zeromq::ZmqMessage;

fn main() {
    let _msg = ZmqMessage::try_from(vec![Bytes::from_static(b"body")]).unwrap();
}
